# SCU

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: lint.yaml
config/: scu.yaml
data/: SampleData_S01_4class.npy
src/: EEG_1SCU.py  EEG_1SCU_CM.py  EEG_1SCU_kfold.py  SCU.py  SampleData_S01_4class_labels.npy  Simple_train.py  datamodule.py  model.py  utils.py
src/scu/: EEG_1SCU_CM.py  EEG_1SCU_kfold.py  datamodule.py  model.py  utils.py
