[metadata]
name = SCU
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A brief description of your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/your_project_name
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    torch
    torchmetrics
    pytorch-lightning
    pyyaml
    argparse

[options.extras_require]
dev =
    black[jupyter]
    isort
    flake8
    mypy
    pre-commit
    coverage
    check-manifest
    sphinx
    doc8
    pyroma
    darglint

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 120
extend-ignore = E203, W503

[coverage:run]
branch = True

[mypy]
ignore_missing_imports = True
